* - [x] Updated project to Java 17 and Gradle 7.4. Updated packages to the latest version, - [x] Enabled Java 17 preview, to support pattern matching expressions, - [x] Updated commands, events and requests to records. - [x] Used Java 17 formatted strings - [x] Removed redundant dependencies to gRPC and Protobuf packages. If they're not explicitly used, they could cause an issue if they're not aligned with ESDB client peer dependencies.
Fixes https://github.com/EventStore/advocacy/issues/193.

See related PR in the Introduction Training: https://github.com/EventStore/training-introduction-java/pull/4.

**_Note:_** When this PR is approved, I can do cherry-picks.

# Conflicts:
#	src/main/java/com/eventstore/scheduling/domain/doctorday/Day.java
#	src/main/java/com/eventstore/scheduling/domain/service/Handlers.java