@@ -1,13 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.5.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.6.7'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'idea'
 }
 
 group = 'com.eventstore.training'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
 
 configurations {
 	developmentOnly
@@ -22,18 +21,11 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.mongodb:mongodb-driver-sync:3.11.2'
-	implementation 'io.vavr:vavr:0.10.2'
+	implementation 'io.vavr:vavr:0.10.4'
 
-	implementation 'com.eventstore:db-client-java:1.0.0'
+	implementation 'com.eventstore:db-client-java:3.0.0'
 
-	implementation "com.google.protobuf:protobuf-java:3.12.1"
-
-	implementation platform('io.grpc:grpc-bom:1.29.0')
-	implementation "io.grpc:grpc-netty-shaded"
-	implementation "io.grpc:grpc-stub"
-	implementation "io.grpc:grpc-protobuf"
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -41,13 +33,13 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
-	testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+	testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
 
-	compileOnly 'org.projectlombok:lombok:1.18.22'
-	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.22'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testCompileOnly 'org.projectlombok:lombok:1.18.24'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
@@ -55,4 +47,15 @@ test {
 	testLogging {
 		events "passed", "skipped", "failed"
 	}
+}
+
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+	jvmArgs += "--enable-preview"
 }
